feat: Aula 3: Entendo tipagem estatica em TS
- Visto como atribuir tipos a variaveis e retorno de funções com TS
As coisa são muito parecidas como feito em C por exemplo, uma diferença é
enquanto em C os tipos são atribuitos antes do nome das variaveis ou funções
Em TS os tipos são atribuidos usando a sintaxe "nome : tipo".

- Tipagem Estica permite evitar erros de passar dados errados para funções ou variaveis
Além de ajudar até mesmo o intelisense do VS a nos mostrar autcompletes certeiros.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "target": "es2020",
         "outDir": "dist/js",
         "noEmitOnError": true,
+        "noImplicitAny": true,
     },
     "include": [
         "app/**/*"
