feat: Aula 4: Visto melhor modelagem e modificador Readnonly
-- Criado uma nova classe para guarda uma lista de negociações feitas
Utilizado o modoficador Readonly para impedir que sejam feitas
modificações diretas em um array. Visto como criar arrays de um só tipo
utilizando o generics T.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 // * Arquivo de Configuração padrão do Typescript, necessario para que seja feita compilação dos arquivos TS para JS legivel pelo navegador!
+
+// * Propriedade noImplicitAny serve para não permitir que o código seja compilado sem que os tipos sejam atribuidos
 {
     "compilerOptions": {
         "target": "es2020",
